fix horizontal scrollbar appearing inside asciinema-player and rephrase some points in the features list

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -9,3 +9,9 @@
     height: 100%;
   }
 }
+
+// Overwrite the style book-theme automatically sets for all .markdown pre
+// elements as we don't want scrollbars inside the asciinema-player
+.asciinema-player pre {
+    overflow-x: hidden
+}
